# PPO

./: .gitignore  README.md
diagrams/: er.drawio  prototype.drawio  uml.drawio  use_case.drawio
src/: CMakeLists.txt  config.txt
src/bd/: gradeRepo.cpp  gradeRepo.hpp  orderRepo.cpp  orderRepo.hpp  productRepo.cpp  productRepo.hpp  reviewRepo.cpp  reviewRepo.hpp  userRepo.cpp  userRepo.hpp
src/logic/: gradeManager.cpp  gradeManager.hpp  orderManager.cpp  orderManager.hpp  productManager.cpp  productManager.hpp  reviewManager.cpp  reviewManager.hpp  usersManager.cpp  usersManager.hpp
src/models/: grade.cpp  grade.hpp  order.cpp  order.hpp  product.cpp  product.hpp  review.cpp  review.hpp  user.cpp  user.hpp
src/sql/: ppo.sql
src/tech_ui/: app.cpp  app.hpp  gradePresenter.cpp  gradePresenter.hpp  main.cpp  orderPresenter.cpp  orderPresenter.hpp  productPresenter.cpp  productPresenter.hpp  reviewPresenter.cpp  reviewPresenter.hpp  userPresenter.cpp  userPresenter.hpp
src/tests/: testGrade.cpp  testOrder.cpp  testProduct.cpp  testReview.cpp  testUser.cpp
utils/: create_data.py  grades.json  interaction.py  orders.json  orders_products.json  products.json  products_grades.json  products_reviews.json  reviews.json  users.json
